index.css
.home-page {
    overflow: hidden;
}

body {
    margin: 0px;
}

.navbar {
    width: 100%;
    border: 1px red solid;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.navbar-logo {
    width: 50px;
}

.navbar-search-logo {
    width: 50px;
    align-items: flex-end;
    justify-content: flex-end;
}

.video {
    width: 100%;
    aspect-ratio: 16/10;
}

.video-details-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}

.channel-pic {
    height: 40px;
    width: 40px;
    background-color: #000000;
    border-radius: 50%;
    display: inline-block;
    display: flex;
    align-items: center;
}

.video-details {
    display: flex;
    flex-direction: column;
}

.video-title {
    margin: 0px;
}

.video-subtitle {
    margin: 0px;
    font-weight: normal;
}

.three-dots {
    height: 30px;
}

.shorts-details-container {
    border: 1px red solid;
    display: grid;
    grid-template-columns: auto auto;
    gap: 3px;
}

.short {
    width: 100%;
    aspect-ratio: 10/16;
    pointer-events: none;
}

.bottom-nav {
    display: grid;
    grid-template-columns: auto auto auto auto;
    justify-content: space-evenly;
    align-items: center;
    padding-top: 10px;
    margin-top: 10px;
    background-color: aqua;
    position: sticky;
    bottom: 0;
}

.nav-icons {
    width: 50px;
}

.nav-text {
    text-align: center;
    width: 50px;
}

.shorts-page {
    background-color: aqua;
    width: 100dvw;
    height: 100dvh;
    overflow: clip;
}

.shorts-video {
    background-color: red;
    width: 100dvw;
    height: 100dvh;
}

.channel-pic {
    height: 2rem;
    width: 2rem;
    background-color: #000000;
}

.short-details {
    color: red;
    position: absolute;
    top: 85%;
    left: 3%;
}

.channel-name {
    display: flex;
    flex-direction: row;
    height: 1rem;
    align-items: center;
    gap: 0.25rem;
    font-weight: 600;
    display: flex;
}

.subscribe-button {
    padding: 0.29rem;
    margin: 0.8rem;
    font-weight: 600;
    border: 1px white solid;
    background-color: white;
    border-radius: 3rem;
}

.short-description {
    font-weight: 600;
}

.short-icons {
    width: 3rem;
    position: absolute;
    top: 40%;
    right: 3%;
    display: flex;
    flex-direction: column;
    align-items: center;
    filter: invert();
}

.short-icon-image {
    width: 2.5rem;
}

.short-icon-text {
    margin-top: 0.15rem;
    margin-bottom: 1rem;
}

.short-icon-image:hover {
    background-color: rgb(238, 16, 16);
    width: 3rem;
}

